# FastAPI_Templates

./: README.md  perf_tuning.md
authentication/fastapi-keyclock/: Makefile  README.md  docker-compose.yml  pyproject.toml
authentication/fastapi-keyclock/fastapi_keyclock/: constants.py  keycloack_utils.py  main.py
authentication/fastapi-oauth-jwt/: .gitignore  extract_requirements_txt.sh  main.py  pyproject.toml
backend_essentials/batch_ingestion_api/: README.md  client.py  pyproject.toml
backend_essentials/batch_ingestion_api/event_batch_ingestions/: main.py
backend_essentials/batch_ingestion_api/event_batch_ingestions/constants/: log_configs.py
backend_essentials/batch_ingestion_api/event_batch_ingestions/core/: batch_processor.py
backend_essentials/batch_ingestion_api/event_batch_ingestions/infra/database/: manager.py  settings.py
backend_essentials/batch_ingestion_api/event_batch_ingestions/models/: base.py
backend_essentials/batch_ingestion_api/event_batch_ingestions/utils/: logging.py
basic-functionality/simple-circuit-breaker/: main.py  pyproject.toml  requirements.txt
basic-functionality/simple-logging-middleware/: README.md  logging_lib.py  main.py  pyproject.toml
sample_projects/fastapi-movie-api/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sample_projects/fastapi-movie-api/MovieAPI/: main.py
sample_projects/fastapi-movie-api/MovieAPI/api/: __init__.py  actors.py  movies.py  subscription.py  token.py  users.py
sample_projects/fastapi-movie-api/MovieAPI/api/schemas/: __init__.py  movie_actor_schema.py
sample_projects/fastapi-movie-api/MovieAPI/middlewares/: __init__.py  request_id.py  request_logger.py
sample_projects/fastapi-movie-api/MovieAPI/security/: hashing.py
sample_projects/fastapi-movie-api/MovieAPI/utils/: __init__.py  db.py  logging.py
sample_projects/fastapi-movie-api/k8s/: deployment.yaml
sample_projects/fastapi-movie-api/tests/: conftest.py  test_actors_api.py  test_movies_api.py  test_users_api.py  tests_subscriptions_api.py
sample_projects/financial-transactions/: Dockerfile  README.md  docker-compose.yml  export_requirements.sh  pyproject.toml  requirements.txt  simple-local-run.sh
sample_projects/financial-transactions/app/: config.py  db.py  dependencies.py  main.py
sample_projects/financial-transactions/app/api/: transaction.py
sample_projects/financial-transactions/app/models/: transaction.py
sample_projects/financial-transactions/app/repositories/: account_repository.py  base.py  transaction_repository.py
sample_projects/financial-transactions/app/schemas/: transaction.py
sample_projects/financial-transactions/app/services/: lock_service.py  transaction_service.py
sample_projects/financial-transactions/tests/: test_transaction_service.py
sample_projects/geoip/: README.md  export_requirements_txt_from_poetry.sh  log.py  main.py  pyproject.toml  requirements.txt  start.sh
sample_projects/mqtt-server/: pyproject.toml
sample_projects/scrap/: README.md  main.py  pyproject.toml  requirements.txt  start.sh
sample_projects/til_board/: README.md  alembic.ini  config.py  containers.py  context_vars.py  database.py  database_models.py  main.py  middlewares.py  pyproject.toml
sample_projects/til_board/common/: auth.py  logger.py  messaging.py
sample_projects/til_board/migrations/: env.py
sample_projects/til_board/migrations/versions/: 2023_11_09_0832-382ab0927111_add_user_table.py  2023_11_12_1115-982c154a8a36_user_add_memo.py
sample_projects/til_board/note/application/: note_service.py
sample_projects/til_board/note/domain/: note.py
sample_projects/til_board/note/domain/repository/: note_repo.py
sample_projects/til_board/note/infra/db_models/: note.py
sample_projects/til_board/note/infra/repository/: note_repo.py
sample_projects/til_board/note/interface/controllers/: note_controller.py
sample_projects/til_board/user/application/: email_service.py  send_welcome_email_task.py  user_service.py  user_service_test.py
sample_projects/til_board/user/domain/: user.py  user_test.py
sample_projects/til_board/user/domain/repository/: user_repo.py
sample_projects/til_board/user/infra/db_models/: user.py
sample_projects/til_board/user/infra/repository/: user_repo.py  user_repo_test.py
sample_projects/til_board/user/interface/controllers/: user_controller.py  user_controller_test.py
sample_projects/til_board/utils/: crypto.py  db_utils.py
sql-db/fastapi-crud/: pyproject.toml
sql-db/fastapi-crud/src/fastapi_crud/: database.py  main.py
sql-db/fastapi-crud/src/fastapi_crud/api/: user.py
sql-db/fastapi-crud/src/fastapi_crud/middleware/: request_id.py  request_logger.py
sql-db/fastapi-crud/src/fastapi_crud/utils/: database.py  logger.py
templates/fastapi-modular-monolith-starter-kit/: .gitignore  .sample.env  .test.env  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh
templates/fastapi-modular-monolith-starter-kit/app/: backend_pre_start.py  initial_data.py  main.py
templates/fastapi-modular-monolith-starter-kit/app/auth/: __init__.py  config.py  deps.py  events.py  exceptions.py  gateway.py  routers.py  security.py
templates/fastapi-modular-monolith-starter-kit/app/auth/emails/: templates.py
templates/fastapi-modular-monolith-starter-kit/app/auth/models/: __init__.py  refresh_token.py  user.py
templates/fastapi-modular-monolith-starter-kit/app/auth/repositories/: refresh_token.py  user.py
templates/fastapi-modular-monolith-starter-kit/app/auth/schemas/: token.py  user.py
templates/fastapi-modular-monolith-starter-kit/app/core/: deps.py  exception_handlers.py  listeners.py  middlewares.py  models.py  routers.py  tasks.py
templates/fastapi-modular-monolith-starter-kit/migrations/: env.py
templates/fastapi-modular-monolith-starter-kit/migrations/versions/: f13f11d01b9e_create_users_and_refresh_tokens_tables_.py
templates/fastapi-modular-monolith-starter-kit/tests/: conftest.py  utils.py
templates/fastapi-modular-monolith-starter-kit/tests/factories/: async_alchemy_factory.py  user.py
(+206 files in other folders)
