[tool.poetry]
name = "movieapi"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
sqlmodel = "^0.0.8"
slowapi = "^0.1.8"
passlib = "^1.7.4"
jose = "^1.0.0"
python-decouple = "^3.8"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
