[tool.poetry]
name = "geoip"
version = "0.1.0"
description = "An API server that runs the GeoIP lookup service"
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.1"
geoip2 = "^4.7.0"
pydantic = "^1.10.7"
httpx = "^0.24.0"
prometheus-fastapi-instrumentator = "^6.0.0"
json-logging = "^1.3.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
