[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_crud"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
